<resources>
    <string name="start_text">*Вступительный текст*</string>
    <string name="enter_to_system">Войти</string>
    <string name="start_reg">Зарегестрироваться</string>

    <string name="app_name">My Application</string>
    <string name="no_user_input">Введите оставшиеся данные</string>
    <string name="logo">*Текст*</string>

    <string name="name_hint">Введите имя</string>
    <string name="surname_hint">Введите фамилию</string>
    <string name="email_hint">Введите email</string>
    <string name="password_hint">Введите пароль</string>
    <string name="gender_hint">Введите свой пол</string>
    <string name="age_hint">Введите свой возраст</string>
    <string name="date_of_birth_hint">Введите дату рождения</string>

    <string name="client_reg">Зарегестрироваться как клиент</string>
    <string name="weight_hint">Введите свой вес</string>
    <string name="height_hint">Введите свой рост</string>

    <string name="has_same_user">Такой пользователь уже существует</string>
    <string name="no_same_user">Такого пользователя не существует</string>

    <string name="doctor_reg">Зарегестрироваться как сотрудник</string>
    <string name="doctor_stage_hint">Введите свой стаж работы</string>
    <string name="finish_reg">Окончить регестрацию</string>

    <string name="enter_to_system_client">Войти как клиент</string>
    <string name="enter_to_system_doctor">Войти как доктор</string>

    <string name="change_data">Изменить мои параметры</string>
    <string name="order_consultation">Заказать консультацию</string>
    <string name="give_consultation">Записать на консультацию</string>
    <string name="no_give_consultation">Не записывать на консультацию</string>
    <string name="find_by_stage">Введите стаж доктора</string>
    <string name="has_doctor">Успешно</string>
    <string name="no_doctor">Извините, записаться не удалось</string>
    <string name="change">Изменить</string>
    <string name="successfully">Успешно</string>
    <string name="unsuccessfully">Не удалось измнить данные</string>

</resources>